--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,17 @@
+server.port=8081
+
 
 #Database H2 config
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.h2.console.enabled=true
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.jpa.generate-ddl=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 
 #logging level
 logging.level.org.springframework.web=DEBUG
+
+server.error.whitelabel.enabled=false
+
+spring.jpa.hibernate.use-new-id-generator-mappings= false
